apps/dashy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  labels:
    app: dashy
    app.kubernetes.io/instance: dashy-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: dashy
    app.kubernetes.io/part-of: dashy
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: dashy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: dashy
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: dashy
    protocol: TCP
    port: 80
    targetPort: 7575
  internalTrafficPolicy: Cluster
