apps/dashy/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`dashy.elposhox.dev`)
    services:
    - kind: Service
      name: dashy
      port: 80
